--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Files that are going to be encrypted
 git/.gitconfig filter=git-crypt diff=git-crypt
+ssh/.ssh/** filter=git-crypt diff=git-crypt
 
 # Making sure that .gitattributes is never encrypted. DON'T TOUCH THAT LINE AND ONE BELOW
 .gitattributes !filter !diff
